<resources>
    <string name="app_name">Rimedia</string>
    <string name="logo">logo</string>
    <string name="language">Language:</string>
    <string name="sing_in_help">Forget Account? <b>Get Help Singing in.</b></string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account? <b>Sign up</b></string>
    <string name="indonesian_social_media_by_rahmatsyah">Indonesian Social Media by <b>Rahmatsyah</b></string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="phone_number_email_or_username">Phone number, email or username</string>
    <string name="welcome">Welcome</string>
    <string name="create_your_account">Create your account</string>
    <string name="register">Register</string>
    <string name="register_with_facebook">Register with Facebook</string>
    <string name="already_have_an_account_log_in">Already have an Account? <b>Log in.</b></string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="like">Like</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_try">TryActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="archive">Archive</string>
    <string name="nametag">Nametag</string>
    <string name="saved">Saved</string>
    <string name="close_friends">Close Friends</string>
    <string name="discover_people">Discover People</string>
    <string name="following">Following</string>
    <string name="you">You</string>

</resources>
